--- a/2.html
+++ b/2.html
@@ -5,6 +5,7 @@
   </body>
   <head>
     <h1> ARRRRROUUUUUFFFFF GGGGAAaAAAAAANGGG </h1>
+    <p>le plus beau de tous les rebeus</p>
     <img src="https://i.redd.it/xn9font8qj731.jpg" alt="arouf">
   </head>
  </html>
